Found blurred text in update log. Fixed.

--- a/STBL.css
+++ b/STBL.css
@@ -76,7 +76,8 @@ strong:hover {
 }
 
 .text-1rI06->*,
-[class*="embedDescription-"]>strong {
+[class*="embedDescription-"]>strong,
+ul li strong {
   -webkit-filter: blur(0px) !important;
   filter: blur(0px) !important;
 }
